@@ -11,6 +11,7 @@ Release 4.21
 	- added hxlspec command-line script to process a HXL JSON spec
 	- added URL munging for HXL Proxy links (non-CSV/JSON)
 	- added URL munging for Kobo survey links (requires an Authorization: header)
+	- if there's an error parsing a formula, return the value "** ERROR **" and log the error
 
 2020-05-20 Release 4.20
 	- switch to jsonpath-ng library to support more JSONPath features
